Fix: fix Collectors.toList at FuncionarioService